# mlp-digit-guess-web-app

./: README.md
back-end/: CMakeLists.txt  Makefile  main.cpp
back-end/internal/: CMakeLists.txt
back-end/internal/csvParser/: CMakeLists.txt  csvParser.cpp
back-end/model/: CMakeLists.txt  multilayerPerceptron.cpp
back-end/train/: CMakeLists.txt  train.cpp
back-end/weights/: 784-392-196-98-49-25-10.txt
front-end/: README.md  index.html  package-lock.json  package.json
front-end/src/: App.css  App.tsx  index.css
